--- a/sites/lynnux/project/1112395712806793228/policy.html
+++ b/sites/lynnux/project/1112395712806793228/policy.html
@@ -6,7 +6,7 @@
     <meta name="description" content="See what we collects and how we handle your data.
 Read our Policy carefully.">
     <meta name="author" content="Dark-LYNN#6568">
-    <meta name="keywords" content="Privacy Policy, Discord, Akira, Usage guidelines, Acceptable behavior, Bot usage, User conduct, Responsibility, Prohibited activities, Liability, Disputes, Termination, Changes to policy, Contact">
+    <meta name="keywords" content="Privacy Policy, Discord, the the bot, Usage guidelines, Acceptable behavior, Bot usage, User conduct, Responsibility, Prohibited activities, Liability, Disputes, Termination, Changes to policy, Contact">
     <meta property="og:site_name" content="https://lynnux.xyz/project/1112395712806793228/terms/">
     <meta property="og:title" content="Privacy Policy - mikayla campinos (bot)">
     <meta property="og:type" content="website">
@@ -21,47 +21,46 @@ Read our Policy carefully.">
     <main class="main">
         <h3>Introduction</h3>
         <p>
-            Akira Bot (hereafter referred to as "Akira", "we", "us", or "our") is committed to protecting the privacy of its users. This privacy policy explains what information we collect, how we use it, and your rights regarding your information.
+            "mikayla campinos" {the bot} (hereafter referred to as "the bot", "we", "us", or "our") is committed to protecting the privacy of its users. This privacy policy explains what information we collect, how we use it, and your rights regarding your information.
         </p>
 
         <h3>Information Collection and Use</h3>
         <p>
-            When you use Akira, we may collect and process the following information about you:
+            When you use the bot, we may collect and process the following information about you:
         </p>
         <ul>
             <li>User information (e.g. user ID, username, avatar)</li>
-            <li>Server information (e.g. server ID, server name, server invites)</li>
             <li>Usage data (e.g. commands used, time stamps)</li>
         </ul>
         <p>
-            This information is used to provide and improve the services offered by Akira. We may also use this information to communicate with you, such as to respond to your requests or to send you notifications.
+            This information is used to provide and improve the services offered by the bot. We may also use this information to communicate with you, such as to respond to your requests or to send you notifications.
         </p>
 
         <h3>Data Storage</h3>
         <p>
-            The information collected by Akira is stored on secure servers located in Germany. We take appropriate security measures to protect your information against unauthorized access, loss, or disclosure.
+            The information collected by the bot is stored on secure servers located in Europe. We take appropriate security measures to protect your information against unauthorized access, loss, or disclosure.
         </p>
 
         <h3>Data Retention</h3>
         <p>
-            We will retain your information for as long as necessary to provide the services offered by Akira or as required by law. After this period, your information will be deleted.
+            We will retain your information for as long as necessary to provide the services offered by the bot or as required by law. After this period, your information will be deleted.
         </p>
 
         <h3>Third-Party Services</h3>
         <p>
-            Akira may use third-party services to provide certain services, such as hosting and data storage. These third-party services may collect and process your information on our behalf. We take appropriate measures to ensure that these third-party services
+            The bot may use third-party services to provide certain services, such as hosting and data storage. These third-party services may collect and process your information on our behalf. We take appropriate measures to ensure that these third-party services
             protect your privacy and comply with applicable laws.
         </p>
 
         <h3>Your Rights</h3>
         <p>
             You have the right to access, rectify, and delete your information, as well as the right to limit its processing and to object to its processing. You also have the right to data portability. If you wish to exercise any of these rights, please contact
-            us by using the "akira contact" command or contacting @Dark-LYNN#6568 on Discord.
+            us by using the "!contact" command or contacting @Dark-LYNN#6568 on Discord.
         </p>
 
         <h3>Changes to this Privacy Policy</h3>
         <p>
-            We may make changes to this privacy policy from time to time. If we make significant changes, we will notify you through the Discord server where Akira is used or through another appropriate means. By continuing to use Akira, you accept the terms of this
+            We may make changes to this privacy policy from time to time. If we make significant changes, we will notify you through the Discord server where the bot is used or through another appropriate means. By continuing to use the bot, you accept the terms of this
             privacy policy and future updates to it.
         </p>
     </main>
