--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -149,6 +149,15 @@
                   <img src="./assets/images/icon-design.svg" alt="design icon" width="40"/>
                 </div>
                 <div class="service-content-box">
+                  <h4 class="h4 service-item-title">Twitch/Discord emoji design</h4>
+                  <p class="service-item-text">Design of average quality twitch and discord emoji's that are created at an amateur level.</p>
+                </div>
+              </li>
+              <li class="service-item">
+                <div class="service-icon-box">
+                  <img src="./assets/images/icon-design.svg" alt="design icon" width="40"/>
+                </div>
+                <div class="service-content-box">
                   <h4 class="h4 service-item-title">Web design</h4>
                   <p class="service-item-text">Design of average quality created at an amateur level.</p>
                 </div>
