--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -32,7 +32,7 @@
           </figure>
           <div class="info-content">
             <h1 class="name" title="Richard hanrick">Lynnux</h1>
-            <p class="title">Developer</p>
+            <p class="title">Developer / Artist</p>
           </div>
           <button class="info_more-btn" data-sidebar-btn>
             <span>Show Contacts</span>
