--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -131,8 +131,8 @@
           </header>
           <section class="about-text">
             <p>
-              Hi there i'm lynn and i am a passionate Discord bot developer and website developer with experience in various programming languages such as Python, JavaScript, and HTML/CSS.
-              I love creating new projects and bringing ideas to life through code.
+              Hi there i'm lynn and i am a passionate Discord bot/website developer with experience in various programming languages such as Python, JavaScript, and HTML/CSS.
+              I love creating new projects and bringing ideas to life through code. And as an extra i try my best creating twitch discord (chibi) emoji's at an amateur level.
             </p>
             <p>
               I'm constantly learning and exploring new technologies to improve my skills and provide better solutions for my clients.
@@ -262,6 +262,11 @@
                 <span>2019 — Present</span>
                 <p class="timeline-text">I have used online resources such as tutorials, coding communities, and personal projects to learn the skills I need for my projects.</p>
               </li>
+              <li class="timeline-item">
+                <h4 class="h4 timeline-item-title">Self-Educated Artist</h4>
+                <span>2022 — Present</span>
+                <p class="timeline-text">I have used online resources such as tutorials, art communities, and personal projects to learn the skills I need for my art.</p>
+              </li>
             </ol>
           </section>
           <section class="timeline">
@@ -277,6 +282,11 @@
                 <span>2019 — Present</span>
                 <p class="timeline-text">I personaly don't really have any experience developing.</p>
               </li>
+              <li class="timeline-item">
+                <h4 class="h4 timeline-item-title">Chibi twitch emote experience</h4>
+                <span>2023 — Present</span>
+                <p class="timeline-text">I create some general chibi emoji's for streamers.</p>
+              </li>
             </ol>
           </section>
 
@@ -286,8 +296,8 @@
             <ul class="skills-list content-card">
               <li class="skills-item">
                 <div class="title-wrapper">
-                  <h5 class="h5">Web design</h5>
-                  <data value="80">20%</data>
+                  <h5 class="h5">Artistics</h5>
+                  <data value="11">11%</data>
                 </div>
                 <div class="skill-progress-bg">
                   <div class="skill-progress-fill" style="width: 20%"></div>
@@ -295,7 +305,7 @@
               </li>
               <li class="skills-item">
                 <div class="title-wrapper">
-                  <h5 class="h5">Web development</h5>
+                  <h5 class="h5">Web design/development</h5>
                   <data value="70">17%</data>
                 </div>
                 <div class="skill-progress-bg">
@@ -325,7 +335,7 @@
                 <button class="active" data-filter-btn>All</button>
               </li>
               <li class="filter-item">
-                <button data-filter-btn>Web design</button>
+                <button data-filter-btn>Art designs</button>
               </li>
               <li class="filter-item">
                 <button data-filter-btn>Applications</button>
@@ -376,6 +386,18 @@
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
                     <img src="./assets/images/project-2.jpg" alt="orizon" loading="lazy"/>
+                  </figure>
+                  <h3 class="project-title">Akira</h3>
+                  <p class="project-category">Web development</p>
+                </a>
+              </li>
+              <li class="project-item active" data-filter-item data-category="Web design">
+                <a href="https://emoji's.lynnux.xyz">
+                  <figure class="project-img">
+                    <div class="project-item-icon-box">
+                      <ion-icon name="eye-outline"></ion-icon>
+                    </div>
+                    <img src="./assets/images/project-3.jpg" alt="orizon" loading="lazy"/>
                   </figure>
                   <h3 class="project-title">Akira</h3>
                   <p class="project-category">Web development</p>
