--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -385,7 +385,7 @@
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
-                    <img src="./assets/images/project-2.jpg" alt="orizon" loading="lazy"/>
+                    <img src="./assets/images/project-2.jpg" alt="Akira Site" loading="lazy"/>
                   </figure>
                   <h3 class="project-title">Akira</h3>
                   <p class="project-category">Web development</p>
@@ -397,7 +397,7 @@
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
-                    <img src="./assets/images/project-3.jpg" alt="orizon" loading="lazy"/>
+                    <img src="./assets/images/project-3.jpg" alt="Emoji's" loading="lazy"/>
                   </figure>
                   <h3 class="project-title">Akira</h3>
                   <p class="project-category">Web development</p>
