--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -392,7 +392,7 @@
                 </a>
               </li>
               <li class="project-item active" data-filter-item data-category="Web design">
-                <a href="https://lynnux.xyz/packs's">
+                <a href="https://lynnux.xyz/emotes">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
