--- a/sites/lynnux/emotes/index.html
+++ b/sites/lynnux/emotes/index.html
@@ -49,7 +49,7 @@
               data-is-boost-fallback="">
               <div class="js-thumbnail-base shot-thumbnail-base disabled-shot-section dribbble-shot dribbble  ">
                 <figure style="background-color: #ffc4f2" class="js-thumbnail-placeholder shot-thumbnail-placeholder">
-                  <img src="./assets/images/Main.png" alt="Pink Doomfist Chibi Emotes (overwatch)">
+                  <img src="./assets/images/toko.png" alt="Pink Doomfist Chibi Emotes (overwatch)">
                 </figure>
                 <div class="shot-thumbnail-extras"></div>
                 <a class="shot-thumbnail-link dribbble-link js-shot-link" href="./">
