--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -356,7 +356,7 @@
                   <button data-select-item>All</button>
                 </li>
                 <li class="select-item">
-                  <button data-select-item>Web design</button>
+                  <button data-select-item>Art designs</button>
                 </li>
                 <li class="select-item">
                   <button data-select-item>Applications</button>
@@ -391,7 +391,7 @@
                   <p class="project-category">Web development</p>
                 </a>
               </li>
-              <li class="project-item active" data-filter-item data-category="Web design">
+              <li class="project-item active" data-filter-item data-category="Art designs">
                 <a href="https://lynnux.xyz/emotes">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
