--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -400,7 +400,7 @@
                     <img src="./emotes/assets/images/toko.png" alt="Emoji's" loading="lazy"/>
                   </figure>
                   <h3 class="project-title">Akira</h3>
-                  <p class="project-category">Web development</p>
+                  <p class="project-category">Art designs</p>
                 </a>
               </li>
             </ul>
