--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -391,7 +391,7 @@
                   <p class="project-category">Web development</p>
                 </a>
               </li>
-              <li class="project-item active" data-filter-item data-category="Art designs">
+              <li class="project-item active" data-filter-item data-category="art designs">
                 <a href="https://lynnux.xyz/emotes">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
