--- a/sites/lynnux/emotes/test.html
+++ b/sites/lynnux/emotes/test.html
@@ -13,9 +13,9 @@
     <meta property="og:image:secure_url" content="https://cdn.lynnux.xyz/images/AkiraAvatar.png">
     <meta name="theme-color" content="#f47fff">
     <!-- favicon -->
-    <link rel="shortcut icon" href="./assets/images/my-avatar.png" type="image/x-icon"/>
+    <link rel="shortcut icon" href="../assets/images/my-avatar.png" type="image/x-icon"/>
     <!-- custom css link -->
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="../assets/css/style.css" />
     <!-- google font link -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -28,7 +28,7 @@
       <aside class="sidebar" data-sidebar>
         <div class="sidebar-info">
           <figure class="avatar-box">
-            <img src="./assets/images/my-avatar.png" alt="Richard hanrick" width="80"/>
+            <img src="../assets/images/my-avatar.png" alt="Richard hanrick" width="80"/>
           </figure>
           <div class="info-content">
             <h1 class="name" title="Richard hanrick">Lynnux</h1>
