--- a/sites/lynnux/emotes/test.html
+++ b/sites/lynnux/emotes/test.html
@@ -125,7 +125,7 @@
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
-                    <img src="./assets/images/project-2.jpg" alt="Akira Site" loading="lazy"/>
+                    <img src="./assets/images/Main.png" alt="Akira Site" loading="lazy"/>
                   </figure>
                   <h3 class="project-title">Akira</h3>
                   <p class="project-category">Web development</p>
