--- a/sites/lynnux/emotes/test.html
+++ b/sites/lynnux/emotes/test.html
@@ -77,10 +77,10 @@
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
-                    <img src="./assets/images/project-1.jpg" alt="Akira" loading="lazy"/>
+                    <img src="./assets/images/toko.png" alt="Akira" loading="lazy"/>
                   </figure>
-                  <h3 class="project-title">Akira</h3>
-                  <p class="project-category">Discord Bot Development</p>
+                  <h3 class="project-title">Pink Doomfist Chibi</h3>
+                  <p class="project-category">Its_Toko</p>
                 </a>
               </li>
               <li class="project-item active" data-filter-item data-category="web development">
