--- a/sites/lynnux/emotes/test.html
+++ b/sites/lynnux/emotes/test.html
@@ -72,7 +72,7 @@
           <section class="projects">
             <ul class="project-list">
               <li class="project-item active" data-filter-item data-category="applications">
-                <a href="https://discord.com/application-directory/738057910923296839">
+                <a href="https://twitch.tv/Its_Toko">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
