--- a/sites/lynnux/emotes/test.html
+++ b/sites/lynnux/emotes/test.html
@@ -77,34 +77,34 @@
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
-                    <img src="./assets/images/toko.png" alt="Akira" loading="lazy"/>
+                    <img src="./assets/images/toko.png" alt="Toko" loading="lazy"/>
                   </figure>
                   <h3 class="project-title">Pink Doomfist Chibi</h3>
                   <p class="project-category">Its_Toko</p>
                 </a>
               </li>
               <li class="project-item active" data-filter-item data-category="web development">
-                <a href="https://akira.lynnux.xyz">
+                <a href="./">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
-                    <img src="./assets/images/Main.png" alt="Akira Site" loading="lazy"/>
+                    <img src="./assets/images/Main.png" alt="na" loading="lazy"/>
                   </figure>
-                  <h3 class="project-title">Akira</h3>
-                  <p class="project-category">Web development</p>
+                  <h3 class="project-title">n/a</h3>
+                  <p class="project-category">n/a</p>
                 </a>
               </li>
               <li class="project-item active" data-filter-item data-category="art designs">
-                <a href="https://lynnux.xyz/emotes">
+                <a href="./">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
-                    <img src="./emotes/assets/images/toko.png" alt="Emoji's" loading="lazy"/>
+                    <img src="./assets/images/Main.png" alt="na" loading="lazy"/>
                   </figure>
-                  <h3 class="project-title">Akira</h3>
-                  <p class="project-category">Art designs</p>
+                  <h3 class="project-title">n/a</h3>
+                  <p class="project-category">n/a</p>
                 </a>
               </li>
             </ul>
