--- a/sites/lynnux/emotes/test.html
+++ b/sites/lynnux/emotes/test.html
@@ -107,6 +107,42 @@
                   <p class="project-category">n/a</p>
                 </a>
               </li>
+              <li class="project-item active" data-filter-item data-category="art designs">
+                <a href="./">
+                  <figure class="project-img">
+                    <div class="project-item-icon-box">
+                      <ion-icon name="eye-outline"></ion-icon>
+                    </div>
+                    <img src="./assets/images/Main.png" alt="na" loading="lazy"/>
+                  </figure>
+                  <h3 class="project-title">n/a</h3>
+                  <p class="project-category">n/a</p>
+                </a>
+              </li>
+              <li class="project-item active" data-filter-item data-category="art designs">
+                <a href="./">
+                  <figure class="project-img">
+                    <div class="project-item-icon-box">
+                      <ion-icon name="eye-outline"></ion-icon>
+                    </div>
+                    <img src="./assets/images/Main.png" alt="na" loading="lazy"/>
+                  </figure>
+                  <h3 class="project-title">n/a</h3>
+                  <p class="project-category">n/a</p>
+                </a>
+              </li>
+              <li class="project-item active" data-filter-item data-category="art designs">
+                <a href="./">
+                  <figure class="project-img">
+                    <div class="project-item-icon-box">
+                      <ion-icon name="eye-outline"></ion-icon>
+                    </div>
+                    <img src="./assets/images/Main.png" alt="na" loading="lazy"/>
+                  </figure>
+                  <h3 class="project-title">n/a</h3>
+                  <p class="project-category">n/a</p>
+                </a>
+              </li>
             </ul>
           </section>
         </article>
