--- a/sites/lynnux/emotes/index.html
+++ b/sites/lynnux/emotes/index.html
@@ -44,7 +44,7 @@
           <ul class="contacts-list">
             <li class="contact-item">
               <div class="icon-box">
-                <ion-icon name="calendar-outline"></ion-icon>
+                <ion-icon name="happy-outline"></ion-icon>
               </div>
               <div class="contact-info">
                 <p class="contact-title">Emotes:</p>
