--- a/cdn/downloads/emotes/index.html
+++ b/cdn/downloads/emotes/index.html
@@ -24,22 +24,22 @@
             </thead>
             <tbody>
                 <tr class='file'>
-                    <td><a href='./Doomfist.zip/' class='name'>Doomfist.zip</a></td>
-                    <td><a href='./Doomfist.zip/'>ZIP file</a></td>
-                    <td sorttable_customkey='2253'><a href='./Doomfist.zip/'>9.95 MB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./Doomfist.zip/'>Jul 21 2023 9:41 PM</a></td>
+                    <td><a href='./doomfist/' class='name'>Doomfist</a></td>
+                    <td><a href='./doomfist/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='2253'><a href='./Doomfist.zip/'>N/A</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./Doomfist.zip/'>Jul 21 2023 9:50 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./Mercy.zip' class='name'>Mercy.zip</a></td>
-                    <td><a href='./Mercy.zip'>ZIP file</a></td>
-                    <td sorttable_customkey='29460'><a href='./Mercy.zip'>17.6 MB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./Mercy.zip'>Jul 21 2023 9:41 PM</a></td>
+                    <td><a href='./mercy' class='name'>mercy</a></td>
+                    <td><a href='./mercy'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='29460'><a href='./Mercy.zip'>N/A</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./Mercy.zip'>Jul 21 2023 9:50 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./index.html/' class='name'>index.html</a></td>
                     <td><a href='./index.html/'>HTML File</a></td>
                     <td sorttable_customkey='2253'><a href='./js/'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./js/'>Jul 21 2023 9:44 PM</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./js/'>Jul 21 2023 9:48 PM</a></td>
                 </tr>
             </tbody>
         </table>
