--- a/cdn/downloads/emotes/mercy/index.html
+++ b/cdn/downloads/emotes/mercy/index.html
@@ -23,17 +23,59 @@
                 </tr>
             </thead>
             <tbody>
-                <tr class='file'>
-                    <td><a href='./Doomfist.zip/' class='name'>Doomfist.zip</a></td>
-                    <td><a href='./Doomfist.zip/'>ZIP file</a></td>
-                    <td sorttable_customkey='2253'><a href='./Doomfist.zip/'>9.95 MB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./Doomfist.zip/'>Jul 21 2023 9:41 PM</a></td>
+                <tr class='directory'>
+                    <td><a href='./28x28/' class='name'>28x28</a></td>
+                    <td><a href='./28x28/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='2253'><a href='./28x28/'>N/A</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./28x28/'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='directory'>
+                    <td><a href='./56x56/' class='name'>56x56</a></td>
+                    <td><a href='./56x56/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='2253'><a href='./56x56/'>N/A</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./56x56/'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='directory'>
+                    <td><a href='./112x112/' class='name'>112x112</a></td>
+                    <td><a href='./112x112/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='2253'><a href='./112x112/'>N/A</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./112x112/'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='directory'>
+                    <td><a href='./367x367/' class='name'>367x367</a></td>
+                    <td><a href='./367x367/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='2253'><a href='./367x367/'>N/A</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./367x367/'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='directory'>
+                    <td><a href='./500x500/' class='name'>500x500</a></td>
+                    <td><a href='./500x500/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='2253'><a href='./500x500/'>N/A</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./500x500/'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='directory'>
+                    <td><a href='./1000x1000/' class='name'>1000x1000</a></td>
+                    <td><a href='./1000x1000/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='2253'><a href='./1000x1000/'>N/A</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./1000x1000/'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='directory'>
+                    <td><a href='./Animated/' class='name'>Animated</a></td>
+                    <td><a href='./Animated/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='2253'><a href='./Animated/'>N/A</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./Animated/'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./Mercy.zip' class='name'>Mercy.zip</a></td>
-                    <td><a href='./Mercy.zip'>ZIP file</a></td>
-                    <td sorttable_customkey='29460'><a href='./Mercy.zip'>17.6 MB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./Mercy.zip'>Jul 21 2023 9:41 PM</a></td>
+                    <td><a href='./Template.jpg/' class='name'>Template.jpg</a></td>
+                    <td><a href='./Template.jpg/'>JPG file</a></td>
+                    <td sorttable_customkey='2253'><a href='./Doomfist.zip/'>786 KB</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./Doomfist.zip/'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./Template_Colored.jpg' class='name'>Template_Colored.jpg</a></td>
+                    <td><a href='./Template_Colored.jpg'>JPG file</a></td>
+                    <td sorttable_customkey='29460'><a href='./Template_Colored.jpg'>784 KB</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./Template_Colored.jpg'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./index.html/' class='name'>index.html</a></td>
