--- a/cdn/downloads/emotes/mercy/index.html
+++ b/cdn/downloads/emotes/mercy/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div id="container">
-        <h1>cdn.lynnux.xyz/downloads/zip/</h1>
+        <h1>cdn.lynnux.xyz/downloads/emotes/mercy/</h1>
         <table class="sortable">
             <thead>
                 <tr>
