--- a/cdn/downloads/emotes/index.html
+++ b/cdn/downloads/emotes/index.html
@@ -23,6 +23,12 @@
                 </tr>
             </thead>
             <tbody>
+                <tr class='directory'>
+                    <td><a href='../' class='name'>...</a></td>
+                    <td><a href='../'>&lt;GO BACK&gt;</a></td>
+                    <td sorttable_customkey='2253'><a href='../'>N/A</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='../'>N/A</a></td>
+                </tr>
                 <tr class='file'>
                     <td><a href='./doomfist/' class='name'>Doomfist</a></td>
                     <td><a href='./doomfist/'>&lt;Directory&gt;</a></td>
