--- a/cdn/downloads/emotes/mercy/index.html
+++ b/cdn/downloads/emotes/mercy/index.html
@@ -25,7 +25,7 @@
             <tbody>
                 <tr class='directory'>
                     <td><a href='../' class='name'>...</a></td>
-                    <td><a href='../'>&lt;GO BACK&gt;</a></td>
+                    <td><a href='../'>...</a></td>
                     <td sorttable_customkey='2253'><a href='../'>N/A</a></td>
                     <td sorttable_customkey='20190630184359'><a href='../'>N/A</a></td>
                 </tr>
