--- a/cdn/downloads/emotes/mercy/367x367/index.html
+++ b/cdn/downloads/emotes/mercy/367x367/index.html
@@ -60,10 +60,10 @@
                     <td sorttable_customkey='20190630184359'><a href='./Laugh new.png/'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./Laugh.png/' class='name'>Laugh.png</a></td>
-                    <td><a href='./Laugh.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./Laugh.png/'>207 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./Laugh.png/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./Laughing.png/' class='name'>Laughing.png</a></td>
+                    <td><a href='./Laughing.png/'>PNG file</a></td>
+                    <td sorttable_customkey='2253'><a href='./Laughing.png/'>207 KB</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./Laughing.png/'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./Ok.png/' class='name'>Ok.png</a></td>
