--- a/cdn/downloads/emotes/index.html
+++ b/cdn/downloads/emotes/index.html
@@ -30,7 +30,7 @@
                     <td sorttable_customkey='20190630184359'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./doomfist/' class='name'>Doomfist</a></td>
+                    <td><a href='./doomfist/' class='name'>doomfist</a></td>
                     <td><a href='./doomfist/'>&lt;Directory&gt;</a></td>
                     <td sorttable_customkey='2253'><a href='./Doomfist.zip/'>N/A</a></td>
                     <td sorttable_customkey='20190630184359'><a href='./Doomfist.zip/'>Jul 21 2023 9:50 PM</a></td>
