--- a/cdn/downloads/emotes/doomfist/Animated/index.html
+++ b/cdn/downloads/emotes/doomfist/Animated/index.html
@@ -30,20 +30,20 @@
                     <td sorttable_customkey='20190630184359'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='directory'>
-                    <td><a href='./112x112/angry.gif/' class='name'>./112x112/</a></td>
-                    <td><a href='./112x112/angry.gif/'>&lt;Directory&gt;</a></td>
+                    <td><a href='./112x112/angry.gif/' class='name'>112x112</a></td>
+                    <td><a href='./112x112/angry.gif/'>GIF file</a></td>
                     <td sorttable_customkey='2253'><a href='./112x112/angry.gif'>N/A</a></td>
                     <td sorttable_customkey='20190630184359'><a href='./112x112/angry.gif'>Jul 21 2023 10:10 PM</a></td>
                 </tr>
                 <tr class='directory'>
                     <td><a href='./28x28/angry.gif/' class='name'>28x28</a></td>
-                    <td><a href='./28x28/angry.gif/'>&lt;Directory&gt;</a></td>
+                    <td><a href='./28x28/angry.gif/'>GIF file</a></td>
                     <td sorttable_customkey='2253'><a href='./28x28/angry.gif/'>N/A</a></td>
                     <td sorttable_customkey='20190630184359'><a href='./28x28/angry.gif/'>Jul 21 2023 10:10 PM</a></td>
                 </tr>
                 <tr class='directory'>
                     <td><a href='./56x56/angry.gif/' class='name'>56x56</a></td>
-                    <td><a href='./56x56/angry.gif/'>&lt;Directory&gt;</a></td>
+                    <td><a href='./56x56/angry.gif/'>GIF file</a></td>
                     <td sorttable_customkey='2253'><a href='./56x56/v/'>N/A</a></td>
                     <td sorttable_customkey='20190630184359'><a href='./56x56/angry.gif/'>Jul 21 2023 10:10 PM</a></td>
                 </tr>
