--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -399,7 +399,7 @@
                     </div>
                     <img src="./emotes/assets/images/toko.png" alt="Emoji's" loading="lazy"/>
                   </figure>
-                  <h3 class="project-title">Akira</h3>
+                  <h3 class="project-title">Emote's</h3>
                   <p class="project-category">Art designs</p>
                 </a>
               </li>
