--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -387,7 +387,7 @@
                     </div>
                     <img src="./assets/images/project-2.jpg" alt="Akira Site" loading="lazy"/>
                   </figure>
-                  <h3 class="project-title">Akira</h3>
+                  <h3 class="project-title">Akira Website</h3>
                   <p class="project-category">Web development</p>
                 </a>
               </li>
