--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -237,8 +237,8 @@
             <h3 class="h3 clients-title">Clients</h3>
             <ul class="clients-list has-scrollbar">
               <li class="clients-item">
-                <a href="#">
-                  <img src="./assets/images/logo-1-color.png" alt="client logo"/>
+                <a href="https://twitch.tv/its_toko/">
+                  <img src="./assets/images/toko x.png" alt="Its_Toko"/>
                 </a>
               </li>
             </ul>
