--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -241,6 +241,11 @@
                   <img src="./assets/images/toko x.png" alt="Its_Toko"/>
                 </a>
               </li>
+              <li class="clients-item">
+                <a href="#">
+                  <img src="./assets/images/logo-1-color.png" alt="client logo"/>
+                </a>
+              </li>
             </ul>
           </section>
         </article>
