--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -238,7 +238,7 @@
             <ul class="clients-list has-scrollbar">
               <li class="clients-item">
                 <a href="https://twitch.tv/its_toko/">
-                  <img src="./assets/images/toko x.png" alt="Its_Toko"/>
+                  <img src="./assets/images/toko x.png" alt="Its_Toko" width="500" height="281"/>
                 </a>
               </li>
               <li class="clients-item">
