--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -238,12 +238,12 @@
             <ul class="clients-list has-scrollbar">
               <li class="clients-item">
                 <a href="https://twitch.tv/its_toko/">
-                  <img src="./assets/images/toko x.png" alt="Its_Toko" width="500" height="281"/>
+                  <img src="./assets/images/toko x.png" alt="Its_Toko" height="150"/>
                 </a>
               </li>
               <li class="clients-item">
                 <a href="#">
-                  <img src="./assets/images/logo-1-color.png" alt="client logo"/>
+                  <img src="./assets/images/logo-1-color.png" alt="client logo" height="150"/>
                 </a>
               </li>
             </ul>
