--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -234,7 +234,7 @@
           </div>
           <!-- clients-->
           <section class="clients">
-            <h3 class="h3 clients-title">Clients</h3>
+            <h3 class="h3 clients-title">Known by</h3>
             <ul class="clients-list has-scrollbar">
               <li class="clients-item">
                 <a href="https://twitch.tv/its_toko/">
