--- a/sites/lynnux/emotes/index.html
+++ b/sites/lynnux/emotes/index.html
@@ -71,7 +71,7 @@
           </header>
           <section class="projects">
             <ul class="project-list">
-              <li class="project-item active" data-filter-item data-category="applications">
+              <li class="project-item active" data-filter-item data-category="art designs">
                 <a href="https://twitch.tv/Its_Toko">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
@@ -83,16 +83,16 @@
                   <p class="project-category">Its_Toko</p>
                 </a>
               </li>
-              <li class="project-item active" data-filter-item data-category="web development">
-                <a href="./">
+              <li class="project-item active" data-filter-item data-category="art designs">
+                <a href="https://twitch.tv/MyceliaIsOffline">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
-                    <img src="./assets/images/Main.png" alt="na" loading="lazy"/>
+                    <img src="./assets/images/MyceliaIsOffline.png" alt="na" loading="lazy"/>
                   </figure>
-                  <h3 class="project-title">n/a</h3>
-                  <p class="project-category">n/a</p>
+                  <h3 class="project-title">lifeguar Mercy Chibi</h3>
+                  <p class="project-category">MyceliaIsOffline</p>
                 </a>
               </li>
               <li class="project-item active" data-filter-item data-category="art designs">
