--- a/sites/lynnux/emotes/index.html
+++ b/sites/lynnux/emotes/index.html
@@ -81,7 +81,7 @@
           <section class="projects">
             <ul class="project-list">
               <li class="project-item active" data-filter-item data-category="art designs">
-                <a href="https://twitch.tv/Its_Toko">
+                <a href="https://cdn.lynnux.xyz/downloads/emotes/doomfist/">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
@@ -93,7 +93,7 @@
                 </a>
               </li>
               <li class="project-item active" data-filter-item data-category="art designs">
-                <a href="https://twitch.tv/MyceliaIsOffline">
+                <a href="https://cdn.lynnux.xyz/downloads/emotes/mercy/">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
