--- a/sites/lynnux/emotes/index.html
+++ b/sites/lynnux/emotes/index.html
@@ -86,7 +86,7 @@
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
-                    <img src="./assets/images/toko.png" alt="Toko" loading="lazy"/>
+                    <img src="./assets/images/Its_Toko.png" alt="Toko" loading="lazy"/>
                   </figure>
                   <h3 class="project-title">Pink Doomfist Chibi</h3>
                   <p class="project-category">Its_Toko</p>
