--- a/cdn/downloads/emotes/mercy/index.html
+++ b/cdn/downloads/emotes/mercy/index.html
@@ -29,6 +29,12 @@
                     <td sorttable_customkey='2253'><a href='../'>N/A</a></td>
                     <td sorttable_customkey='20190630184359'><a href='../'>N/A</a></td>
                 </tr>
+                <tr class='file'>
+                    <td><a href='https://cdn.lynnux.xyz/downloads/zip/mercy.zip' class='name'>Download FULL pack</a></td>
+                    <td><a href='https://cdn.lynnux.xyz/downloads/zip/mercy.zip'>ZIP file</a></td>
+                    <td sorttable_customkey='2253'><a href='https://cdn.lynnux.xyz/downloads/zip/mercy.zip'>17.6 MB</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='https://cdn.lynnux.xyz/downloads/zip/mercy.zip'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
                 <tr class='directory'>
                     <td><a href='./28x28/' class='name'>28x28</a></td>
                     <td><a href='./28x28/'>&lt;Directory&gt;</a></td>
