--- a/cdn/downloads/zip/index.html
+++ b/cdn/downloads/zip/index.html
@@ -23,6 +23,12 @@
                 </tr>
             </thead>
             <tbody>
+                <tr class='directory'>
+                    <td><a href='https://lynnux.xyz/' class='name'>...</a></td>
+                    <td><a href='https://lynnux.xyz/'>&lt;GO BACK&gt;</a></td>
+                    <td sorttable_customkey='2253'><a href='https://lynnux.xyz/'>N/A</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='https://lynnux.xyz/'>N/A</a></td>
+                </tr>
                 <tr class='file'>
                     <td><a href='./Doomfist.zip/' class='name'>Doomfist.zip</a></td>
                     <td><a href='./Doomfist.zip/'>ZIP file</a></td>
@@ -35,12 +41,7 @@
                     <td sorttable_customkey='29460'><a href='./Mercy.zip'>17.6 MB</a></td>
                     <td sorttable_customkey='20190630184359'><a href='./Mercy.zip'>Jul 21 2023 9:41 PM</a></td>
                 </tr>
-                <tr class='file'>
-                    <td><a href='./index.html/' class='name'>index.html</a></td>
-                    <td><a href='./index.html/'>HTML File</a></td>
-                    <td sorttable_customkey='2253'><a href='./js/'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./js/'>Jul 21 2023 9:44 PM</a></td>
-                </tr>
+
             </tbody>
         </table>
     </div>
