--- a/cdn/downloads/zip/index.html
+++ b/cdn/downloads/zip/index.html
@@ -24,10 +24,10 @@
             </thead>
             <tbody>
                 <tr class='directory'>
-                    <td><a href='https://lynnux.xyz/' class='name'>...</a></td>
-                    <td><a href='https://lynnux.xyz/'>&lt;GO BACK&gt;</a></td>
-                    <td sorttable_customkey='2253'><a href='https://lynnux.xyz/'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='https://lynnux.xyz/'>N/A</a></td>
+                    <td><a href='../' class='name'>...</a></td>
+                    <td><a href='../'>&lt;GO BACK&gt;</a></td>
+                    <td sorttable_customkey='2253'><a href='../'>N/A</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./Doomfist.zip/' class='name'>Doomfist.zip</a></td>
