--- a/cdn/downloads/emotes/sombra/index.html
+++ b/cdn/downloads/emotes/sombra/index.html
@@ -1,1 +1,96 @@
+<!doctype html>
+<html>
 
+<head>
+    <meta charset="UTF-8">
+    <link rel="shortcut icon" href="./.favicon.ico">
+    <title>Directory Contents</title>
+
+    <link rel="stylesheet" href="https://dark-lynn.github.io/style.css">
+    <script src="https://dark-lynn.github.io/sorttable.js"></script>
+</head>
+
+<body>
+    <div id="container">
+        <h1>cdn.lynnux.xyz/downloads/emotes/sombra/</h1>
+        <table class="sortable">
+            <thead>
+                <tr>
+                    <th>Filename</th>
+                    <th>Type</th>
+                    <th>Size</th>
+                    <th>Date Modified</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class='directory'>
+                    <td><a href='../' class='name'>...</a></td>
+                    <td><a href='../'>&lt;GO BACK&gt;</a></td>
+                    <td sorttable_customkey='2253'><a href='../'>N/A</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='../'>N/A</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='https://cdn.lynnux.xyz/downloads/zip/sombra.zip' class='name'>Download FULL pack</a></td>
+                    <td><a href='https://cdn.lynnux.xyz/downloads/zip/sombra.zip'>ZIP file</a></td>
+                    <td sorttable_customkey='2253'><a href='https://cdn.lynnux.xyz/downloads/zip/sombra.zip'>N/A</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='https://cdn.lynnux.xyz/downloads/zip/sombra.zip'>N/A</a></td>
+                </tr>
+                <tr class='directory'>
+                    <td><a href='./28x28/' class='name'>28x28</a></td>
+                    <td><a href='./28x28/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='2253'><a href='./28x28/'>N/A</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./28x28/'>N/A</a></td>
+                </tr>
+                <tr class='directory'>
+                    <td><a href='./56x56/' class='name'>56x56</a></td>
+                    <td><a href='./56x56/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='2253'><a href='./56x56/'>N/A</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./56x56/'>N/A</a></td>
+                </tr>
+                <tr class='directory'>
+                    <td><a href='./112x112/' class='name'>112x112</a></td>
+                    <td><a href='./112x112/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='2253'><a href='./112x112/'>N/A</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./112x112/'>N/A</a></td>
+                </tr>
+                <tr class='directory'>
+                    <td><a href='./367x367/' class='name'>367x367</a></td>
+                    <td><a href='./367x367/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='2253'><a href='./367x367/'>N/A</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./367x367/'>N/A</a></td>
+                </tr>
+                <tr class='directory'>
+                    <td><a href='./500x500/' class='name'>500x500</a></td>
+                    <td><a href='./500x500/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='2253'><a href='./500x500/'>N/A</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./500x500/'>N/A</a></td>
+                </tr>
+                <tr class='directory'>
+                    <td><a href='./1000x1000/' class='name'>1000x1000</a></td>
+                    <td><a href='./1000x1000/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='2253'><a href='./1000x1000/'>N/A</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./1000x1000/'>N/A</a></td>
+                </tr>
+                <tr class='directory'>
+                    <td><a href='./Animated/' class='name'>Animated</a></td>
+                    <td><a href='./Animated/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='2253'><a href='./Animated/'>N/A</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./Animated/'>N/A</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./Template.jpg/' class='name'>Template.jpg</a></td>
+                    <td><a href='./Template.jpg/'>JPG file</a></td>
+                    <td sorttable_customkey='2253'><a href='./Doomfist.zip/'>N/A</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./Doomfist.zip/'>N/A</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./Template_Colored.jpg' class='name'>Template_Colored.jpg</a></td>
+                    <td><a href='./Template_Colored.jpg'>JPG file</a></td>
+                    <td sorttable_customkey='29460'><a href='./Template_Colored.jpg'>N/A</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./Template_Colored.jpg'>N/A</a></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</body>
+</html>
