--- a/cdn/downloads/emotes/mercy/index.html
+++ b/cdn/downloads/emotes/mercy/index.html
@@ -6,6 +6,16 @@
     <link rel="shortcut icon" href="./.favicon.ico">
     <title>Directory Contents</title>
 
+    <meta property="og:title" content="Mercy Chibi Emotes" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://cdn.lynnux.xyz/" />
+    <meta property="og:image" content="https://lynnux.xyz/emotes/assets/images/MyceliaIsOffline.png" />
+    <meta property="og:description" content="This page includes the 'lifeguard mercy' chibi emotes, \nsizes: 1000x1000, 500x500 367x367, 112x112, 56x56 And 28x28 \nThis directory also includes a .zip file which downloads all files at once." />
+    <meta name="theme-color" content="#de403c">
+    
+    <!-- Include this to make the og:image larger -->
+    <meta name="twitter:card" content="summary_large_image">
+
     <link rel="stylesheet" href="https://dark-lynn.github.io/style.css">
     <script src="https://dark-lynn.github.io/sorttable.js"></script>
 </head>
