--- a/cdn/downloads/emotes/mercy/28x28/index.html
+++ b/cdn/downloads/emotes/mercy/28x28/index.html
@@ -5,6 +5,18 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="./.favicon.ico">
     <title>Directory Contents</title>
+    
+    <meta property="og:title" content="Mercy Chibi Emotes" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://cdn.lynnux.xyz/" />
+    <meta property="og:image" content="https://lynnux.xyz/emotes/assets/images/MyceliaIsOffline.png" />
+    <meta property="og:description" content="This page includes the 'lifeguard mercy' chibi emotes, 
+sizes: 28x28 
+Includes 11 .png files" />
+    <meta name="theme-color" content="#de403c">
+    
+    <!-- Include this to make the og:image larger -->
+    <meta name="twitter:card" content="summary_large_image">
 
     <link rel="stylesheet" href="https://dark-lynn.github.io/style.css">
     <script src="https://dark-lynn.github.io/sorttable.js"></script>
