--- a/cdn/downloads/emotes/mercy/28x28/index.html
+++ b/cdn/downloads/emotes/mercy/28x28/index.html
@@ -8,7 +8,7 @@
     
     <meta property="og:title" content="Mercy Chibi Emotes" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://cdn.lynnux.xyz/" />
+    <meta property="og:url" content="http://cdn.lynnux.xyz/downloads/emote/mercy/28x28/" />
     <meta property="og:image" content="https://lynnux.xyz/emotes/assets/images/MyceliaIsOffline.png" />
     <meta property="og:description" content="This page includes the 'lifeguard mercy' chibi emotes, 
 sizes: 28x28 
