--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -48,7 +48,7 @@
               </div>
               <div class="contact-info">
                 <p class="contact-title">Email</p>
-                <a href="mailto:botdevlynn@gmail.com" class="contact-link">botdevlynn@gmail.com</a>
+                <a href="mailto:contact.lynnux@gmail.com" class="contact-link">contact.lynnux@gmail.com</a>
               </div>
             </li>
     <!--    <li class="contact-item">
@@ -189,11 +189,11 @@
               <li class="testimonials-item">
                 <div class="content-card" data-testimonials-item>
                   <figure class="testimonials-avatar-box">
-                    <img src="./assets/images/avatar-1.png" alt="PlaceHolder" width="60" data-testimonials-avatar/>
+                    <img src="./assets/images/Mycelia.png" alt="PlaceHolder" width="60" data-testimonials-avatar/>
                   </figure>
-                  <h4 class="h4 testimonials-item-title" data-testimonials-title>PlaceHolder</h4>
+                  <h4 class="h4 testimonials-item-title" data-testimonials-title>Mycelia</h4>
                   <div class="testimonials-text" data-testimonials-text>
-                    <p>This is a PlaceHolder because i didnt get any testimonials yet</p>
+                    <p>Lynnux is a detailed professional who care's deeply for their work. Their Lifeguard Mercy Emotes have engaged and created funny moments in my chat. If you're looking for a passionate artist to deliver your creative vision, look no further!</p>
                   </div>
                 </div>
               </li>
