--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -189,7 +189,7 @@
               <li class="testimonials-item">
                 <div class="content-card" data-testimonials-item>
                   <figure class="testimonials-avatar-box">
-                    <img src="./assets/images/Mycelia.png" alt="PlaceHolder" width="60" data-testimonials-avatar/>
+                    <img src="./assets/images/Mycelia.png" alt="Mycelia.png" width="60" data-testimonials-avatar/>
                   </figure>
                   <h4 class="h4 testimonials-item-title" data-testimonials-title>Mycelia</h4>
                   <div class="testimonials-text" data-testimonials-text>
@@ -242,8 +242,8 @@
                 </a>
               </li>
               <li class="clients-item">
-                <a href="#">
-                  <img src="./assets/images/logo-1-color.png" alt="client logo" height="150"/>
+                <a href="https://www.twitch.tv/myceliaisoffline">
+                  <img src="./assets/images/MyceliaBanner.png" alt="MyceliaIsOffline" height="150"/>
                 </a>
               </li>
             </ul>
