--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -290,7 +290,7 @@
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">Chibi twitch emote experience</h4>
                 <span>2023 — Present</span>
-                <p class="timeline-text">I create some general chibi emoji's for streamers.</p>
+                <p class="timeline-text">I create some general chibi emoji's.</p>
               </li>
             </ol>
           </section>
