--- a/sites/lynnux/404.html
+++ b/sites/lynnux/404.html
@@ -1,1 +1,22 @@
-Couldn't find this page!
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <title>404 - Page Not Found</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../akira/assets/css/styles.css">
+    <link rel="shortcut icon" href="./assets/images/my-avatar.png">
+</head>
+
+<body>
+    <div class="Notfound_container___vm_Q">
+        <img src="https://cdn.lynnux.xyz/svg/NotFound.svg" alt="not-found" class="Notfound_not-found-img__st0se">
+        <h4 style="background-color: transparent;">
+            The page you're looking for can't be found.
+        </h4>
+        <button onclick="window.location.href='https://lynnux.xyz';" class="Notfound_not-found-button__M59dr">Home</button>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js "></script>
+</body>
+
+</html>
