--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -452,7 +452,7 @@
                 <input type="email" name="email" class="form-input" placeholder="Your email address" required />
               </div>
               <textarea name="message" class="form-input" placeholder="Your Message" required></textarea>
-              <button class="form-btn" type="submit">
+              <button class="form-btn" type="submit" disabled data-form-btn>
                 <ion-icon name="paper-plane"></ion-icon>
                 <span>Send Message</span>
               </button>
