--- a/sites/lynnux/helper/twitch/index.htm
+++ b/sites/lynnux/helper/twitch/index.htm
@@ -36,7 +36,7 @@
     <!---->
     <!-- <link href="https://fonts.googleapis.com/css2?family=Inter:wght@350;400;450;550&display=swap" rel="stylesheet" /> -->
     <!-- <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;0,500;1,400;1,500&display=swap" rel="stylesheet" /> -->
-    <link href="./Inspect – Twitch Elements_files/css2" rel="stylesheet">
+    <link href="./Inspect – Twitch Elements_files/css2.css" rel="stylesheet">
     <!---->
 
     <script>
