--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -11,6 +11,7 @@
     <meta property="og:description" content="Hi there i'm lynn and i am a passionate Discord bot developer and website developer with experience in various programming languages such as Python, JavaScript, and HTML/CSS. I love creating new projects and bringing ideas to life through code. I'm constantly learning and exploring new technologies to improve my skills and provide better solutions for my clients. I believe that good communication and attention to detail are essential in creating successful projects. Let's work together to create something amazing!" />
     <meta property="og:image" content="https://cdn.lynnux.xyz/images/AkiraAvatar.png">
     <meta property="og:image:secure_url" content="https://cdn.lynnux.xyz/images/AkiraAvatar.png">
+    <meta name="p:domain_verify" content="8c72dddc235011ec65f54fc3e0fcc7ad"/>
     <meta name="theme-color" content="#f47fff">
     <!-- favicon -->
     <link rel="shortcut icon" href="./assets/images/my-avatar.png" type="image/x-icon"/>
