--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -482,6 +482,14 @@
     src="https://ct.pinterest.com/v3/?event=init&tid=2613190187521&pd[em]=<hashed_email_address>&noscript=1" />
   </noscript>
   <!-- end Pinterest Tag -->
+  <script>
+    pintrk('track', 'lead', {
+    lead_type: 'Newsletter'
+    });
+  </script>
+  <script>
+    pintrk('track', 'viewcategory');
+  </script>
 
 
 </html>
