--- a/cdn/downloads/emotes/index.html
+++ b/cdn/downloads/emotes/index.html
@@ -29,17 +29,23 @@
                     <td sorttable_customkey='2253'><a href='../'>N/A</a></td>
                     <td sorttable_customkey='20190630184359'><a href='../'>N/A</a></td>
                 </tr>
-                <tr class='file'>
+                <tr class='directory'>
                     <td><a href='./doomfist/' class='name'>doomfist</a></td>
                     <td><a href='./doomfist/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='2253'><a href='./Doomfist.zip/'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./Doomfist.zip/'>Jul 21 2023 9:50 PM</a></td>
+                    <td sorttable_customkey='2253'><a href='./Doomfist/'>N/A</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./Doomfist/'>Jul 21 2023 9:50 PM</a></td>
                 </tr>
-                <tr class='file'>
+                <tr class='directory'>
                     <td><a href='./mercy' class='name'>mercy</a></td>
                     <td><a href='./mercy'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='29460'><a href='./Mercy.zip'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./Mercy.zip'>Jul 21 2023 9:50 PM</a></td>
+                    <td sorttable_customkey='29460'><a href='./Mercy'>N/A</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./Mercy'>Jul 21 2023 9:50 PM</a></td>
+                </tr>
+                <tr class='directory'>
+                    <td><a href='./sombra' class='name'>sombra</a></td>
+                    <td><a href='./sombra'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='29460'><a href='./sombra'>N/A</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./sombra'>Jul 27 2023 2:53 PM</a></td>
                 </tr>
             </tbody>
         </table>
