--- a/cdn/downloads/emotes/sombra/index.html
+++ b/cdn/downloads/emotes/sombra/index.html
@@ -54,10 +54,10 @@
                     <td sorttable_customkey='20190630184359'><a href='./112x112/'>N/A</a></td>
                 </tr>
                 <tr class='directory'>
-                    <td><a href='./367x367/' class='name'>367x367</a></td>
-                    <td><a href='./367x367/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='2253'><a href='./367x367/'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./367x367/'>N/A</a></td>
+                    <td><a href='./336x336/' class='name'>336x336</a></td>
+                    <td><a href='./336x336/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='2253'><a href='./336x336/'>N/A</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./336x336/'>N/A</a></td>
                 </tr>
                 <tr class='directory'>
                     <td><a href='./500x500/' class='name'>500x500</a></td>
@@ -78,16 +78,16 @@
                     <td sorttable_customkey='20190630184359'><a href='./Animated/'>N/A</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./Template.jpg/' class='name'>Template.jpg</a></td>
-                    <td><a href='./Template.jpg/'>JPG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./Doomfist.zip/'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./Doomfist.zip/'>N/A</a></td>
+                    <td><a href='./template.jpg/' class='name'>template.jpg</a></td>
+                    <td><a href='./template.jpg/'>JPG file</a></td>
+                    <td sorttable_customkey='2253'><a href='./template'>N/A</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./template'>N/A</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./Template_Colored.jpg' class='name'>Template_Colored.jpg</a></td>
-                    <td><a href='./Template_Colored.jpg'>JPG file</a></td>
-                    <td sorttable_customkey='29460'><a href='./Template_Colored.jpg'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./Template_Colored.jpg'>N/A</a></td>
+                    <td><a href='./template-colored.jpg' class='name'>template-colored.jpg</a></td>
+                    <td><a href='./template-colored.jpg'>JPG file</a></td>
+                    <td sorttable_customkey='29460'><a href='./template-colored.jpg'>N/A</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./template-colored.jpg'>N/A</a></td>
                 </tr>
             </tbody>
         </table>
