--- a/sites/lynnux/emotes/index.html
+++ b/sites/lynnux/emotes/index.html
@@ -112,7 +112,7 @@
                     </div>
                     <img src="./assets/images/SombraPreview.png" alt="na" loading="lazy"/>
                   </figure>
-                  <h3 class="project-title">Peppermint Sombra</h3>
+                  <h3 class="project-title">Peppermint Sombra Chibi</h3>
                   <p class="project-category">Not used yet.</p>
                 </a>
               </li>
