--- a/cdn/downloads/emotes/sombra/index.html
+++ b/cdn/downloads/emotes/sombra/index.html
@@ -80,14 +80,20 @@
                 <tr class='file'>
                     <td><a href='./template.jpg/' class='name'>template.jpg</a></td>
                     <td><a href='./template.jpg/'>JPG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./template'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./template'>N/A</a></td>
+                    <td sorttable_customkey='2253'><a href='./template'>1 MB</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./template'>Jul 27 2023 2:53 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./template-colored.jpg' class='name'>template-colored.jpg</a></td>
                     <td><a href='./template-colored.jpg'>JPG file</a></td>
-                    <td sorttable_customkey='29460'><a href='./template-colored.jpg'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./template-colored.jpg'>N/A</a></td>
+                    <td sorttable_customkey='29460'><a href='./template-colored.jpg'>777 KB</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./template-colored.jpg'>Jul 27 2023 2:53 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./READ%20ME.txt' class='name'>READ ME.txt</a></td>
+                    <td><a href='./READ%20ME.txt'>TXT file</a></td>
+                    <td sorttable_customkey='29460'><a href='./READ%20ME.txt'>2 KB</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./READ%20ME.txt'>Jul 27 2023 2:53 PM</a></td>
                 </tr>
             </tbody>
         </table>
